--- a/pyVerein/finance/templates/finance/debitor/edit.html
+++ b/pyVerein/finance/templates/finance/debitor/edit.html
@@ -14,13 +14,13 @@
 {% endblock %} 
 
 {% block title %}
-    {{ ddebitor.number }} {{ ddebitor.name }}
+    {{ debitor.number }} {{ debitor.name }}
 {% endblock title %}
 
 {% block content %}
     <div class="main-narrow form">
         <div class="detail-content  mdc-elevation--z4">
-            <form action="{% url 'finance:ddebitor_edit' ddebitor.pk %}" method="POST" id="form">
+            <form action="{% url 'finance:debitor_edit' debitor.pk %}" method="POST" id="form">
                 {% csrf_token %}
                 <div class="heading mdc-typography--overline">
                     {% trans 'Creditor' %}
@@ -31,7 +31,7 @@
                     </div>
                 <div class="form-group form-submit">
                     <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" title="{% trans 'Save' %}" />
-                    <a href="{% url 'finance:ddebitor_detail' pk=ddebitor.pk %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
+                    <a href="{% url 'finance:debitor_detail' pk=debitor.pk %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
                 </div>
             </form>
         </div>
@@ -44,6 +44,6 @@
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
-        $('#form').exitOnEsc("{% url 'finance:ddebitor_list' %}");
+        $('#form').exitOnEsc("{% url 'finance:debitor_list' %}");
     </script>
 {% endblock %}
