--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -88,16 +88,28 @@ div.dataTables_wrapper div.dataTables_filter .mdc-text-field {
     margin-right: 5px; }
   .form .form-group .mdc-input:last-of-type {
     margin-left: 5px; }
+  .form .form-group .mdc-input:first-of-type:last-of-type {
+    margin-right: 5px;
+    margin-left: 0px; }
   .form .form-group .mdc-input:not(:first-of-type):not(:last-of-type) {
     margin-right: 5px;
     margin-left: 5px; }
+  .form .form-group .mdc-text-field-helper-text {
+    display: inline-flex;
+    align-items: flex-end;
+    margin-bottom: 15px;
+    width: 50%; }
+
+.form .spacer {
+  width: 50%; }
 
 .form .mdc-input {
   width: 50%;
   min-width: 200px; }
 
 .form .full-width .mdc-input {
-  width: 100%; }
+  width: 100%;
+  margin-right: 0px; }
 
 .form .form-submit {
   margin-top: 30px; }
@@ -185,3 +197,13 @@ footer#page-footer {
   color: #212121; }
   .alert-minimalist.debug .mdc-button__icon {
     color: #212121; }
+
+@media (max-width: 600px) {
+  .form .form-group {
+    flex-wrap: wrap; }
+  .form .spacer {
+    display: none; }
+  .form .mdc-input {
+    width: 100%;
+    margin-left: 0px !important;
+    margin-right: 0px !important; } }
