Division initial views and templates

--- a/pyVerein/app/templates/app/_drawer.html
+++ b/pyVerein/app/templates/app/_drawer.html
@@ -23,6 +23,12 @@
                             <span class="mdc-list-item__text">{% trans 'Members' %}</span>
                         </a>
                     </li>
+                    <li class="mdc-list-item {% base_url_class 'members:division_list' 'mdc-list-item--activated'%}">
+                        <a href="{% url 'members:division_list' %}" title="{% trans 'Divisions' %}">
+                            <span class="mdc-list-item__graphic fa fa-users" aria-hidden="true"></span>
+                            <span class="mdc-list-item__text">{% trans 'Divisions' %}</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <hr class="mdc-list-divider">
