--- a/pyVerein/app/static/app/css/material.css
+++ b/pyVerein/app/static/app/css/material.css
@@ -4830,3 +4830,7 @@ a.mdc-fab {
   position: fixed;
   bottom: 70px;
   left: 70px; }
+
+.mdc-select {
+  margin-top: 12px;
+  margin-bottom: 8px; }
