--- a/pyVerein/members/templates/members/division_form_fields.html
+++ b/pyVerein/members/templates/members/division_form_fields.html
@@ -6,6 +6,6 @@
     {% trans 'Division' %}
 </div>
 <div class="form-group full-width">
-    {% trans 'Impersonal account name' as name_label%}
+    {% trans 'Name' as name_label%}
     {% include "utils/_textfield.html" with field=form.name label=name_label %}
 </div>
