Dashboard member fix

--- a/material.io/sass/material.scss
+++ b/material.io/sass/material.scss
@@ -22,6 +22,7 @@ $mdc-typography-styles-button: (
 @import "@material/radio/mdc-radio";
 @import "@material/form-field/mdc-form-field";
 @import "@material/checkbox/mdc-checkbox";
+@import "@material/card/mdc-card";
 
 .mdc-list-item{
     a{
