Removed currency from chart label

--- a/pyVerein/app/templates/app/dashboard.html
+++ b/pyVerein/app/templates/app/dashboard.html
@@ -112,7 +112,7 @@
                 title: bankAccountsSum.toFixed(2) + ' {{ global_preferences.Finance__currency }}',
                 label: {
                     format: function (value, ratio, id) {
-                        return value.toFixed(2) + ' {{ global_preferences.Finance__currency }}';
+                        return value.toFixed(2);
                     } 
                 }
             },
