--- a/material.io/sass/material.scss
+++ b/material.io/sass/material.scss
@@ -64,7 +64,9 @@ a.mdc-fab{
     bottom: 70px;
     left: 70px;
 }
-
+.mdc-fab--absolute-bottom-right.second{
+    bottom: 140px;
+}
 .mdc-select{
     margin-top: 12px;
     margin-bottom: 8px;
