--- a/pyVerein/app/static/app/css/material.css
+++ b/pyVerein/app/static/app/css/material.css
@@ -5051,6 +5051,9 @@ a.mdc-fab {
   bottom: 70px;
   left: 70px; }
 
+.mdc-fab--absolute-bottom-right.second {
+  bottom: 140px; }
+
 .mdc-select {
   margin-top: 12px;
   margin-bottom: 8px; }
